fixed pixel spacing error

--- a/src/scss/About.scss
+++ b/src/scss/About.scss
@@ -10,7 +10,7 @@
       gap: 2rem;
     }
 
-    @media (max-height: 500px) {
+    @media (max-height: 700px) {
       gap: 1rem;
     }
   }
@@ -27,7 +27,7 @@
       width: 324px;
     }
 
-    @media (max-height: 500px) {
+    @media (max-height: 700px) {
       height: 175px;
       width: 175px;
     }
@@ -108,7 +108,7 @@
   }
 }
 
-@media (max-height: 500px) {
+@media (max-height: 700px) {
   .about {
    padding: 4rem 1rem; 
   }
