--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -66,7 +66,7 @@ body {
     left: -100%!important;
   }
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     height: 2.5rem;
   }
 }
@@ -94,7 +94,7 @@ nav {
       gap: 4vw;
     }
 
-    @media (max-height: 500px) {
+    @media (max-height: 700px) {
       font-size: 1.7vw;
       padding-right: 9vw;
       gap: 5vh;
@@ -140,7 +140,7 @@ nav {
     justify-content: center;
   }
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     height: 150vh
   }
 }
@@ -181,7 +181,7 @@ nav {
     padding: 3vh 0 0 0;
   }
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     padding: 0 4rem;
   }
 }
@@ -193,7 +193,7 @@ nav {
   font-family: poppins, sans-serif;
   color: var(--text-color);
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     gap: .8rem;
     padding: 0 2rem;
   }
@@ -278,7 +278,7 @@ nav {
     transition: all 0.5s;
   }
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     padding: 3.5vw 0.5vw 0 29.5vw;
     transition: all 0.5s;
   }
@@ -301,7 +301,7 @@ nav {
     right: 0;
   }
 
-  @media (max-height: 500px) {
+  @media (max-height: 700px) {
     height: 150px;
     width: 150px;
     top: 20px;
